Fix styling on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,7 +4,7 @@
 
 @layer base {
   body {
-    @apply font-sans bg-primary text-white antialiased;
+    @apply font-sans bg-primary text-white antialiased px-6;
   }
 
   p { 
@@ -59,7 +59,7 @@
 
 @layer components {
   .menu--link {
-    @apply flex items-center text-base text-white no-underline transition-colors gap-x-1.5 duration-300;
+    @apply flex items-center text-xs md:text-base text-white no-underline transition-colors gap-x-1.5 duration-300;
   }
 }
 
